objects/childabc__c.object
<CustomObject>
    <description>Remnant changes in description</description>
    <fields>
        <fullName>bbbb__c</fullName>
        <label>bbbb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gggg__c</fullName>
        <description>description</description>
        <inlineHelpText>helpful</inlineHelpText>
        <label>gggg</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>junkjunk__c</fullName>
        <label>junkjunk</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newfield__c</fullName>
        <label>newfield</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentabc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>parentabc</label>
        <referenceTo>parentabc__c</referenceTo>
        <relationshipLabel>parentabc (parentabc)</relationshipLabel>
        <relationshipName>parentabc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test1__c</fullName>
        <label>test1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test2__c</fullName>
        <label>test2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>first</fullName>
                </value>
                <value>
                    <fullName>second</fullName>
                </value>
                <value>
                    <fullName>third</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test3__c</fullName>
        <label>test3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>childabc</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>childabc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>childabcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>